fix horizontal scrolling behavior

--- a/src/App.scss
+++ b/src/App.scss
@@ -145,7 +145,7 @@ h2 {
 .section--three {
   z-index: 4;
   position: relative;
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
 .bold {
